# FFmpegDemo

./: build.gradle
app/: build.gradle
app/src/androidTest/java/com/wardtn/ffmpegdemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/common/: ThreadSafeQueue.h
app/src/main/cpp/player/decoder/: AudioDecoder.cpp  AudioDecoder.h  Decoder.h  DecoderBase.cpp  DecoderBase.h  VideoDecoder.cpp  VideoDecoder.h
app/src/main/cpp/player/render/: BaseGLRender.h
app/src/main/cpp/player/render/audio/: AudioGLRender.cpp  AudioGLRender.h
app/src/main/cpp/player/render/video/: NativeRender.cpp  NativeRender.h  VideoRender.h
app/src/main/cpp/util/: GLUtils.cpp  GLUtils.h  ImageDef.h  LogUtil.h
app/src/main/java/com/wardtn/ffmpegdemo/: NativeMediaPlayerActivity.kt  TestActivity.kt
app/src/main/java/com/wardtn/ffmpegdemo/base/: BaseActivity.kt
app/src/main/java/com/wardtn/ffmpegdemo/media/: FFMediaPlayer.kt  MySurfaceView.java
app/src/main/java/com/wardtn/ffmpegdemo/util/: CommonUtils.java
app/src/main/res/layout/: activity_native_media_player.xml  activity_test.xml
app/src/test/java/com/wardtn/ffmpegdemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
